--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Code and Comment</title>
-    <link rel="stylesheet" href="dist/app.css" type="text/css" />
+    <link rel="stylesheet" href="dist/app.css?v=005" type="text/css" />
   </head>
   <body>
     <script>
@@ -13,6 +13,6 @@
         }
       }
     </script>
-    <script src="dist/app.min.js" defer></script>
+    <script src="dist/app.min.js?v=005" defer></script>
   </body>
 </html>
