feat: improve index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="The application to add the comments to a file in Github." />
     <title>Code and Comment</title>
-    <link rel="stylesheet" href="dist/app.css" type="text/css" />
+    <link rel="stylesheet" href="dist/app.css" type="text/css" media="all" />
   </head>
   <body>
     <script>
