--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="The application to add the comments to a file in Github." />
     <title>Code and Comment</title>
-    <link rel="stylesheet" href="dist/app.css?v=0051" type="text/css" />
+    <link rel="stylesheet" href="dist/app.css?v=006" type="text/css"  media="all" />
   </head>
   <body>
     <script>
@@ -13,6 +15,6 @@
         }
       }
     </script>
-    <script src="dist/app.min.js?v=0051" defer></script>
+    <script src="dist/app.min.js?v=006" defer></script>
   </body>
 </html>
