--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
     <meta name="description" content="The application to add the comments to a file in Github." />
     <title>Code and Comment</title>
     <link rel="stylesheet" href="dist/app.css" type="text/css" media="all" />
