--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="The application to add the comments to a file in Github." />
     <title>Code and Comment</title>
-    <link rel="stylesheet" href="dist/app.css?v=013" type="text/css"  media="all" />
+    <link rel="prefetch" href="dist/arrow-back.svg" />
+    <link rel="prefetch" href="dist/arrow-forward.svg" />
+    <link rel="stylesheet" href="dist/app.css?v=014" type="text/css"  media="all" />
   </head>
   <body>
     <script>
@@ -15,6 +17,6 @@
         }
       }
     </script>
-    <script src="dist/app.min.js?v=013" defer></script>
+    <script src="dist/app.min.js?v=014" defer></script>
   </body>
 </html>
