--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Code and Comment</title>
     <link rel="prefetch" href="dist/arrow-back.svg">
     <link rel="prefetch" href="dist/arrow-forward.svg">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css" type="text/css" media="all" />
   </head>
   <body>
