--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="The application to add the comments to a file in Github." />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://code-and-comment.github.io/code-and-comment/" />
+    <meta property="og:title" content="Code and Comment" />
+    <meta property="og:description" content="The application to add the comments to a file in Github." />
+    <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <title>Code and Comment</title>
     <link rel="prefetch" href="dist/arrow-back.svg" />
     <link rel="prefetch" href="dist/arrow-forward.svg" />
