--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:description" content="The application to add the comments to a file in Github." />
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <title>Code and Comment</title>
-    <link rel="prefetch" href="dist/arrow-back.svg" />
-    <link rel="prefetch" href="dist/arrow-forward.svg" />
+    <link rel="prefetch" href="dist/arrow-back.svg" as="image" />
+    <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css?v=026" type="text/css"  media="all" />
   </head>
