--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="dist/app.css" type="text/css" media="all" />
   </head>
   <body>
-    <script>
+    <script defer>
       const process = {
         env: {
           NODE_ENV: 'production'
