--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <link rel="prefetch" href="dist/arrow-back.svg" as="image" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
-    <link rel="stylesheet" href="dist/app.css?v=029" type="text/css"  media="all" />
+    <link rel="stylesheet" href="dist/app.css?v=030" type="text/css"  media="all" />
   </head>
   <body>
-    <script>
+    <script defer>
       const process = {
         env: {
           NODE_ENV: 'production'
         }
       }
     </script>
-    <script src="dist/app.min.js?v=029" defer></script>
+    <script src="dist/app.min.js?v=030" defer></script>
   </body>
 </html>
