--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script defer>
       const process = {
         env: {
-          NODE_ENV: 'production'
+          NODE_ENV: 'development'
         }
       }
     </script>
