--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="The application to add the comments to a file in Github." />
     <title>Code and Comment</title>
-    <link rel="prefetch" href="dist/arrow-forward.svg">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
+    <link rel="preload" href="dist/app.css" as="style" />
+    <link rel="preload" href="dist/app.js" as="script" />
+    <link rel="prefetch" href="dist/repositories.js" as="worker" />
+    <link rel="prefetch" href="dist/codeAndComments.js" as="worker" />
+    <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css" type="text/css" media="all" />
   </head>
