--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <meta property="og:description" content="The application to add the comments to a file in Github." />
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <title>Code and Comment</title>
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
+    <link rel="preload" href="dist/app.css" as="style" />
+    <link rel="preload" href="dist/app.min.js" as="script" />
+    <link rel="prefetch" href="dist/repositories.min.js" as="worker" />
+    <link rel="prefetch" href="dist/codeAndComments.min.js" as="worker" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css?v=0313" type="text/css"  media="all" />
