--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
     <link rel="preload" href="dist/app.css" as="style" />
     <link rel="preload" href="dist/app.min.js" as="script" />
-    <link rel="prefetch" href="dist/repositories.min.js" as="worker" />
-    <link rel="prefetch" href="dist/codeAndComments.min.js" as="worker" />
+    <link rel="preload" href="dist/repositories.min.js" as="worker" />
+    <link rel="preload" href="dist/codeAndComments.min.js" as="worker" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css?v=0313" type="text/css"  media="all" />
