--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <title>Code and Comment</title>
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
-    <link rel="preload" href="dist/app.css?v=0314" as="style" />
-    <link rel="preload" href="dist/app.min.js?v=0314" as="script" />
+    <link rel="preload" href="dist/app.css?v=0315" as="style" />
+    <link rel="preload" href="dist/app.min.js?v=0315" as="script" />
+    <link rel="preload" href="dist/open_and_close.svg" as="image" />
+    <link rel="preload" href="dist/new.svg" as="image" />
+    <link rel="preload" href="dist/list.svg" as="image" />
+    <link rel="preload" href="dist/comment.svg" as="image" />
+    <link rel="prefetch" href="dist/delete.svg" as="image" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
-    <link rel="stylesheet" href="dist/app.css?v=0314" type="text/css"  media="all" />
+    <link rel="stylesheet" href="dist/app.css?v=0315" type="text/css"  media="all" />
   </head>
   <body>
     <script defer>
@@ -25,6 +30,6 @@
         }
       }
     </script>
-    <script src="dist/app.min.js?v=0314" defer></script>
+    <script src="dist/app.min.js?v=0315" defer></script>
   </body>
 </html>
