--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="The application to add the comments to a file in Github." />
     <title>Code and Comment</title>
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
-    <link rel="preload" href="dist/app.css" as="style" />
-    <link rel="preload" href="dist/app.js" as="script" />
+    <link rel="preload" href="dist/app.css?v=0318" as="style" />
+    <link rel="preload" href="dist/app.js?v=0318" as="script" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
-    <link rel="stylesheet" href="dist/app.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="dist/app.css?v=0318" type="text/css" media="all" />
   </head>
   <body>
     <script defer>
@@ -20,6 +20,11 @@
         }
       }
     </script>
-    <script src="dist/app.js" defer></script>
+    <script src="dist/app.js?v=0318" defer></script>
+    <script defer>
+      window.requestIdleCallback(() => {
+        navigator.serviceWorker.register('serviceWorker.js')
+      })
+    </script>
   </body>
 </html>
