--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </script>
     <script src="dist/app.js?v=0318" defer></script>
     <script defer>
-      window.requestIdleCallback(() => {
-        navigator.serviceWorker.register('serviceWorker.js')
-      })
+      // window.requestIdleCallback(() => {
+      //   navigator.serviceWorker.register('serviceWorker.js')
+      // })
     </script>
   </body>
 </html>
