--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="The application to add the comments to a file in Github." />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Code and Comment</title>
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
     <link rel="preload" href="dist/app.css?v=0318" as="style" />
@@ -11,6 +13,7 @@
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css?v=0318" type="text/css" media="all" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <script defer>
