--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <title>Code and Comment</title>
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
-    <link rel="preload" href="dist/app.css?v=0319" as="style" />
-    <link rel="preload" href="dist/app.min.js?v=0319" as="script" />
+    <link rel="preload" href="dist/app.css?v=0320" as="style" />
+    <link rel="preload" href="dist/app.min.js?v=0320" as="script" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
-    <link rel="stylesheet" href="dist/app.css?v=0319" type="text/css"  media="all" />
+    <link rel="stylesheet" href="dist/app.css?v=0320" type="text/css"  media="all" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <script defer>
@@ -25,7 +26,7 @@
         }
       }
     </script>
-    <script src="dist/app.min.js?v=0319" defer></script>
+    <script src="dist/app.min.js?v=0320" defer></script>
     <script defer>
       window.requestIdleCallback(() => {
         navigator.serviceWorker.register('serviceWorker.js')
