--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -9,6 +9,8 @@
     <meta property="og:title" content="Code and Comment" />
     <meta property="og:description" content="The application to add the comments to a file in Github." />
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Code and Comment</title>
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
     <link rel="preload" href="dist/app.css?v=0320" as="style" />
