--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#f1f7fe" />
     <title>Code and Comment</title>
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto" as="style" />
-    <link rel="preload" href="dist/app.css?v=0321" as="style" />
-    <link rel="preload" href="dist/app.min.js?v=0321" as="script" />
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto&font-display=swap" as="style" />
+    <link rel="preload" href="dist/app.css?v=0322" as="style" />
+    <link rel="preload" href="dist/app.min.js?v=0322" as="script" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="all" />
-    <link rel="stylesheet" href="dist/app.css?v=0321" type="text/css"  media="all" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&font-display=swap" rel="stylesheet" media="all" />
+    <link rel="stylesheet" href="dist/app.css?v=0322" type="text/css"  media="all" />
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
@@ -28,7 +29,7 @@
         }
       }
     </script>
-    <script src="dist/app.min.js?v=0321" defer></script>
+    <script src="dist/app.min.js?v=0322" defer></script>
     <script defer>
       window.requestIdleCallback(() => {
         navigator.serviceWorker.register('serviceWorker.js')
