--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#f1f7fe" />
     <title>Code and Comment</title>
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto&font-display=swap" as="style" />
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" as="style" />
     <link rel="preload" href="dist/app.css?v=0321" as="style" />
     <link rel="preload" href="dist/app.js?v=0321" as="script" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&font-display=swap" rel="stylesheet" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css?v=0321" type="text/css" media="all" />
     <link rel="manifest" href="manifest.json" />
   </head>
