--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preload" href="dist/app.css?v=0323" as="style" />
     <link rel="preload" href="dist/app.min.js?v=0323" as="script" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&font-display=swap" rel="stylesheet" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" media="all" />
     <link rel="stylesheet" href="dist/app.css?v=0323" type="text/css"  media="all" />
     <link rel="manifest" href="manifest.json" />
   </head>
