--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="The application to add the comments to a file in Github." />
+    <meta name="description" content="PWA to add comment to Github file." />
     <meta name="twitter:card" content="summary" />
     <meta property="og:url" content="https://code-and-comment.github.io/code-and-comment/" />
     <meta property="og:title" content="Code and Comment" />
-    <meta property="og:description" content="The application to add the comments to a file in Github." />
+    <meta property="og:description" content="PWA to add comment to Github file." />
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/42838312?s=400" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#f1f7fe" />
     <title>Code and Comment</title>
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" as="style" />
-    <link rel="preload" href="dist/app.css?v=0323" as="style" />
-    <link rel="preload" href="dist/app.min.js?v=0323" as="script" />
+    <link rel="preload" href="dist/app.css?v=0324" as="style" />
+    <link rel="preload" href="dist/app.min.js?v=0324" as="script" />
     <link rel="prefetch" href="dist/arrow-forward.svg" as="image" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" media="all" />
-    <link rel="stylesheet" href="dist/app.css?v=0323" type="text/css"  media="all" />
+    <link rel="stylesheet" href="dist/app.css?v=0324" type="text/css"  media="all" />
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
@@ -29,7 +29,7 @@
         }
       }
     </script>
-    <script src="dist/app.min.js?v=0323" defer></script>
+    <script src="dist/app.min.js?v=0324" defer></script>
     <script defer>
       window.requestIdleCallback(() => {
         navigator.serviceWorker.register('serviceWorker.js')
